--- a/lab2/hw2.html
+++ b/lab2/hw2.html
@@ -9,9 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Key" />
+<meta name="author" content="McKenzie Scriven" />
 
-<meta name="date" content="2026-01-03" />
+<meta name="date" content="2026-01-08" />
 
 <title>Homework 2</title>
 
@@ -375,8 +375,8 @@ display: none;
 
 
 <h1 class="title toc-ignore">Homework 2</h1>
-<h4 class="author">Key</h4>
-<h4 class="date">2026-01-03</h4>
+<h4 class="author">McKenzie Scriven</h4>
+<h4 class="date">2026-01-08</h4>
 
 </div>
 
@@ -393,11 +393,11 @@ code chunks to run.</p>
 <h2>Load the library</h2>
 <pre class="r"><code>library(&quot;tidyverse&quot;)</code></pre>
 <pre><code>## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
-## ✔ dplyr     1.1.4     ✔ readr     2.1.6
-## ✔ forcats   1.0.1     ✔ stringr   1.6.0
-## ✔ ggplot2   4.0.1     ✔ tibble    3.3.0
+## ✔ dplyr     1.1.4     ✔ readr     2.1.5
+## ✔ forcats   1.0.1     ✔ stringr   1.5.2
+## ✔ ggplot2   4.0.0     ✔ tibble    3.3.0
 ## ✔ lubridate 1.9.4     ✔ tidyr     1.3.1
-## ✔ purrr     1.2.0     
+## ✔ purrr     1.1.0     
 ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
 ## ✖ dplyr::filter() masks stats::filter()
 ## ✖ dplyr::lag()    masks stats::lag()
@@ -406,31 +406,70 @@ code chunks to run.</p>
 operations. Make a new object <code>pi</code> as 3.14159. You should now
 see the object <code>pi</code> in the environment window in the top
 right.</strong></p>
+<pre class="r"><code>pi &lt;- 3.14159</code></pre>
 <p><strong>2. Write a code chunk that divides <code>pi</code> by 2. Use
 the help command <code>?</code> to learn how to use the
 <code>round</code> function to limit your result to 3 significant
 digits.</strong></p>
+<pre class="r"><code>pi/2</code></pre>
+<pre><code>## [1] 1.570795</code></pre>
+<pre class="r"><code>round(pi/2,digits = 3)</code></pre>
+<pre><code>## [1] 1.571</code></pre>
 <p><strong>3. Calculate the mean for the numbers 2, 8, 4, 6, 7, 4, 9, 9,
 10. Please start by making a new object <code>x</code> that holds these
 values then use <code>mean</code> to perform the
 calculation.</strong></p>
+<pre class="r"><code>x &lt;- c(2,8,4,6,7,4,9,9,10)</code></pre>
+<pre class="r"><code>mean(x)</code></pre>
+<pre><code>## [1] 6.555556</code></pre>
 <p><strong>4. Make three new vectors that show the name, height in feet,
 and height in meters of the five tallest mountains in the
 world.</strong></p>
+<pre class="r"><code>Name &lt;- c(&quot;Mount Everest&quot;, &quot;K2&quot;, &quot;Kangchenjunga&quot;, &quot;Lhotse&quot;, &quot;Makalu&quot;)
+Height_ft &lt;- c(29029, 28251, 28169, 27940, 27838)
+Height_m &lt;- c(8848, 8611, 8586, 8516, 8485)</code></pre>
 <p><strong>5. Combine these vectors into a data frame called
 <code>mountains</code>.</strong></p>
+<pre class="r"><code>mountains &lt;- tibble(&quot;Name&quot; = Name,&quot;Feet&quot; = Height_ft,&quot;Meters&quot; = Height_m)
+mountains</code></pre>
+<pre><code>## # A tibble: 5 × 3
+##   Name           Feet Meters
+##   &lt;chr&gt;         &lt;dbl&gt;  &lt;dbl&gt;
+## 1 Mount Everest 29029   8848
+## 2 K2            28251   8611
+## 3 Kangchenjunga 28169   8586
+## 4 Lhotse        27940   8516
+## 5 Makalu        27838   8485</code></pre>
 <p><strong>6. What is the mean height of the mountains in
 feet?</strong></p>
+<pre class="r"><code>mean(mountains$Feet)</code></pre>
+<pre><code>## [1] 28245.4</code></pre>
 <p><strong>7. When were each of these mountains first climbed (i.e. in
 what year)? Make a new vector <code>first_climbed</code> and add it to
 the <code>mountains</code> data frame.</strong></p>
+<pre class="r"><code>first_climbed &lt;- c(1953, 1954, 1955, 1956, 1955)
+mountains &lt;- add_column(mountains, &quot;First climbed&quot; = first_climbed)</code></pre>
+<pre class="r"><code>mountains</code></pre>
+<pre><code>## # A tibble: 5 × 4
+##   Name           Feet Meters `First climbed`
+##   &lt;chr&gt;         &lt;dbl&gt;  &lt;dbl&gt;           &lt;dbl&gt;
+## 1 Mount Everest 29029   8848            1953
+## 2 K2            28251   8611            1954
+## 3 Kangchenjunga 28169   8586            1955
+## 4 Lhotse        27940   8516            1956
+## 5 Makalu        27838   8485            1955</code></pre>
 <p><strong>8. How many times have each of these mountains been climbed?
 Make a new vector <code>summits</code> and add it to the
 <code>mountains</code> data frame.</strong></p>
+<pre class="r"><code>summits &lt;- c(12884, 800, 532, 933, 499)
+mountains &lt;- add_column(mountains, &quot;Summits&quot; = summits)</code></pre>
 <p><strong>9. Which mountain has the highest number of fatalities? Make
 a new vector <code>fatalities</code> and add it to the
 <code>mountains</code> data frame.</strong></p>
+<pre class="r"><code>fatalities &lt;- c(340, 96, 52, 20, 72)
+mountains &lt;- add_column(mountains, &quot;Fatalities&quot; = fatalities)</code></pre>
 <p><strong>10. Write your data frame to a .csv file.</strong></p>
+<pre class="r"><code>write.csv(mountains, file=&quot;mountains.csv&quot;, row.names = FALSE)</code></pre>
 </div>
 <div id="knit-and-upload" class="section level2">
 <h2>Knit and Upload</h2>
