--- a/lab3/hw3.html
+++ b/lab3/hw3.html
@@ -9,9 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Your Name Here" />
+<meta name="author" content="McKenzie Scriven" />
 
-<meta name="date" content="2026-01-12" />
+<meta name="date" content="2026-01-13" />
 
 <title>Homework 3</title>
 
@@ -375,8 +375,8 @@ display: none;
 
 
 <h1 class="title toc-ignore">Homework 3</h1>
-<h4 class="author">Your Name Here</h4>
-<h4 class="date">2026-01-12</h4>
+<h4 class="author">McKenzie Scriven</h4>
+<h4 class="date">2026-01-13</h4>
 
 </div>
 
@@ -393,11 +393,11 @@ code chunks to run.</p>
 <h2>Load the tidyverse</h2>
 <pre class="r"><code>library(&quot;tidyverse&quot;)</code></pre>
 <pre><code>## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
-## ✔ dplyr     1.1.4     ✔ readr     2.1.6
-## ✔ forcats   1.0.1     ✔ stringr   1.6.0
-## ✔ ggplot2   4.0.1     ✔ tibble    3.3.0
-## ✔ lubridate 1.9.4     ✔ tidyr     1.3.2
-## ✔ purrr     1.2.1     
+## ✔ dplyr     1.1.4     ✔ readr     2.1.5
+## ✔ forcats   1.0.1     ✔ stringr   1.5.2
+## ✔ ggplot2   4.0.0     ✔ tibble    3.3.0
+## ✔ lubridate 1.9.4     ✔ tidyr     1.3.1
+## ✔ purrr     1.1.0     
 ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
 ## ✖ dplyr::filter() masks stats::filter()
 ## ✖ dplyr::lag()    masks stats::lag()
@@ -407,30 +407,75 @@ online research.</p>
 <p><strong>1. Make three new vectors that show the name, height in feet,
 and height in meters of the five tallest mountains in the
 world.</strong></p>
+<pre class="r"><code>name &lt;- c(&quot;Mount Everest&quot;, &quot;K2&quot;, &quot;Kangchenjunga&quot;, &quot;Lhotse&quot;, &quot;Makalu&quot;)
+height_meters &lt;- c(8849, 8611, 8586, 8516, 8485)
+height_feet &lt;- c(29032, 28251, 28169, 27940, 27838)</code></pre>
 <p><strong>2. Combine these vectors into a data frame called
 <code>mountains</code>.</strong></p>
+<pre class="r"><code>mountains &lt;- tibble(name, height_feet, height_meters)
+mountains</code></pre>
+<pre><code>## # A tibble: 5 × 3
+##   name          height_feet height_meters
+##   &lt;chr&gt;               &lt;dbl&gt;         &lt;dbl&gt;
+## 1 Mount Everest       29032          8849
+## 2 K2                  28251          8611
+## 3 Kangchenjunga       28169          8586
+## 4 Lhotse              27940          8516
+## 5 Makalu              27838          8485</code></pre>
 <p><strong>3. What is the mean height of the mountains in
 feet?</strong></p>
+<pre class="r"><code>mean(mountains$height_feet)</code></pre>
+<pre><code>## [1] 28246</code></pre>
 <p><strong>4. When were each of these mountains first climbed (i.e. in
 what year)? Make a new vector <code>first_climbed</code> and add it to
 the <code>mountains</code> data frame.</strong></p>
+<pre class="r"><code>first_climbed &lt;- c(1953, 1954, 1955, 1956, 1955)
+mountains &lt;- add_column(mountains, first_climbed)</code></pre>
+<pre class="r"><code>mountains</code></pre>
+<pre><code>## # A tibble: 5 × 4
+##   name          height_feet height_meters first_climbed
+##   &lt;chr&gt;               &lt;dbl&gt;         &lt;dbl&gt;         &lt;dbl&gt;
+## 1 Mount Everest       29032          8849          1953
+## 2 K2                  28251          8611          1954
+## 3 Kangchenjunga       28169          8586          1955
+## 4 Lhotse              27940          8516          1956
+## 5 Makalu              27838          8485          1955</code></pre>
 <p><strong>5. How many times have each of these mountains been climbed?
 Make a new vector <code>summits</code> and add it to the
 <code>mountains</code> data frame.</strong></p>
+<pre class="r"><code>summits &lt;- c(12884, 800, 187, 933, 560)
+mountains &lt;- add_column(mountains, summits)</code></pre>
 <p><strong>6. Which mountain has the highest number of fatalities? Make
 a new vector <code>fatalities</code> and add it to the
 <code>mountains</code> data frame.</strong></p>
+<pre class="r"><code>fatalities &lt;- c(340, 96, 52, 22, 50)
+mountains &lt;- add_column(mountains, fatalities)</code></pre>
 <p><strong>7. What is the fatality rate (i.e., fatalities divided by
 summits) for each mountain? Create a new vector
 <code>fatality_rate</code> and add it to the <code>mountains</code> data
 frame.</strong></p>
+<pre class="r"><code>fatality_rate &lt;- fatalities/summits
+fatality_rate</code></pre>
+<pre><code>## [1] 0.02638932 0.12000000 0.27807487 0.02357985 0.08928571</code></pre>
+<pre class="r"><code>mountains &lt;- add_column(mountains, fatality_rate)</code></pre>
 <p><strong>8. Write your data frame to a .csv file called
 <code>mountains_data</code>.</strong></p>
+<pre class="r"><code>write.csv(mountains, &quot;mountains_data.csv&quot;, row.names = FALSE)</code></pre>
 <p><strong>9. Clear your environment panel by clicking on the broom
 icon. Then read in your <code>mountains_data.csv</code> file to a new
 object called <code>mountains</code>.</strong></p>
+<pre class="r"><code>mountains &lt;- read.csv(&quot;mountains_data.csv&quot;)</code></pre>
 <p><strong>10. Use a summary function of your choice to show the
 structure of your <code>mountains</code> data frame.</strong></p>
+<pre class="r"><code>str(mountains)</code></pre>
+<pre><code>## &#39;data.frame&#39;:    5 obs. of  7 variables:
+##  $ name         : chr  &quot;Mount Everest&quot; &quot;K2&quot; &quot;Kangchenjunga&quot; &quot;Lhotse&quot; ...
+##  $ height_feet  : int  29032 28251 28169 27940 27838
+##  $ height_meters: int  8849 8611 8586 8516 8485
+##  $ first_climbed: int  1953 1954 1955 1956 1955
+##  $ summits      : int  12884 800 187 933 560
+##  $ fatalities   : int  340 96 52 22 50
+##  $ fatality_rate: num  0.0264 0.12 0.2781 0.0236 0.0893</code></pre>
 </div>
 <div id="knit-and-upload" class="section level2">
 <h2>Knit and Upload</h2>
